# openenclave-curl

./: .gitmodules  CMakeLists.txt  OWNERS  README.md  bors.toml
.github/workflows/: cmake.yml
.jenkins/: Jenkinsfile
tests/: CMakeLists.txt  tests.edl
tests/enclave/: CMakeLists.txt  ca_certificates.h  curl_helper.cpp  curl_helper.h  enclave.cpp
tests/host/: CMakeLists.txt  host.cpp
